# tracker

./: CMakeLists.txt  main.cpp
camshift/: ObjectTracker.cpp  ObjectTracker.h
